--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Boxless</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2VE6ZRXS3Q"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-2VE6ZRXS3Q');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
